# donatello-py

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  donatello.models.rst  donatello.rst  index.rst  modules.rst  requirements.txt
donatello/: __init__.py  async_client.py  base.py  client.py  events.py
donatello/models/: __init__.py  client.py  client_list.py  donate.py  donate_list.py  longpool_donale.py  user.py  user_donates.py
examples/: async _test.py  long_pool.py  simple_usage.py
